# clang-tidy.cmake

./: .clang-tidy  .cmake-format.py  CI_BEST_PRACTICES.md  CMakeLists.txt  README.md  clang_tidy_functions.cmake  project_log.cmake
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
tests/: CMakeLists.txt  example_per_target.cmake  test1.cpp  test2.cpp  test_common.cpp  test_header.h  test_header_check.cpp
tests/consumer/: CMakeLists.txt  main.cpp
